# lab

./: repomix-output.xml
DAYU200_HI3861_ZNNY/: BUILD.gn  aht20_test.c  mqtt_test.c  new_xm01_zhny_temp.c  onenet_mqtt.c  onenet_test.c  random.c  random.h  sta_entry.c  tcp_test.c  udp_test.c  zhjt.h
SmartAgriculture/: build-profile.json5  package-lock.json  package.json
SmartAgriculture/entry/src/main/: config.json
SmartAgriculture/entry/src/main/ets/FormAbility/: form.ts
SmartAgriculture/entry/src/main/ets/MainAbility/pages/: index.ets
SmartAgriculture/entry/src/main/ets/MainAbility/pages/common/: optionItem.ets
SmartAgriculture/entry/src/main/ets/MainAbility/pages/common/utils/: time.ets
SmartAgriculture/entry/src/main/js/widget/pages/index/: index.css  index.hml  index.json
SmartAgriculture/entry/src/main/resources/base/element/: color.json
SmartAgriculture/entry/src/main/resources/en_US/element/: string.json
SmartAgriculture/entry/src/main/resources/zh_CN/element/: string.json
SmartAgriculture/entry/src/ohosTest/: config.json
