# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("DAYU200_HI3861_ZNNY") {
    sources = [
        "new_xm01_zhny_temp.c",
        "sta_entry.c",
        "udp_test.c",
        "tcp_test.c",
        "aht20_test.c",
        "aht20.c",
        "onenet_mqtt.c",
        "random.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/hi3861_adapter/hals/communication/wifi_lite/wifiservice",
        "//device/hisilicon/hispark_pegasus/hi3861_adapter/kal",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include",
        "//third_party/cJSON/",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",
        "//base/iot_hardware/peripheral/interfaces/inner_api",
        "//base/iot_hardware/peripheral/interfaces/inner_api",
    ]

    deps = [
        "//third_party/mqtt_sdk:pahomqtt_static",
        # "//third_party/pahomqtt:pahomqtt_static",
        "//third_party/ssd1306:oled_ssd1306",
    ]
}
